--- a/appveyor.yml
+++ b/appveyor.yml
@@ -95,6 +95,10 @@ build_script:
   - ninja
   
 after_build:
+  # Convert absolute path to relative path in mingw_crt.modulemap
+  - cd %WORK_DIR%/build/NinjaMinGW/swift/lib/swift/mingw/x86_64
+  - sed -i -e 's;c:/msys64;../../../../..;' mingw_crt.modulemap
+  # Archiving to swift.zip
   - cd %WORK_DIR%/build/NinjaMinGW
   - mv swift usr
   - 7z a swift.zip usr/bin/swift.exe usr/bin/*.dll usr/lib/swift
