--- a/appveyor_cygwin.yml
+++ b/appveyor_cygwin.yml
@@ -67,8 +67,8 @@ install:
     
 build_script:
   # Build cmark
-  - c:/cygwin64/bin/mkdir -p %WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/cmark
-  - cd %WORK_DIR%/build/Ninja-ReleaseAssert/cmark
+  - MKDIR %WORK_DIR_IN_CYGWIN%\build\Ninja-ReleaseAssert\cmark-cygwin-x86_64
+  - CD %WORK_DIR%/build/Ninja-ReleaseAssert/cmark-cygwin-x86_64
   - cmake -G Ninja -D CMAKE_BUILD_TYPE=RELEASE -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ %WORK_DIR_IN_CYGWIN%/cmark
   - ninja
   - cd src
@@ -76,8 +76,8 @@ build_script:
   - cp -p libcmark.a %WORK_DIR_IN_CYGWIN%/swift/libcmark.a
 
   # Load llvm/clang lib
-  - c:/cygwin64/bin/mkdir -p %WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/llvm
-  - cd %WORK_DIR%/build/Ninja-ReleaseAssert/llvm
+  - MKDIR %WORK_DIR_IN_CYGWIN%\build\Ninja-ReleaseAssert\llvm-cygwin-x86_64
+  - CD %WORK_DIR%/build/Ninja-ReleaseAssert/llvm-cygwin-x86_64
   #  Get llvm-builder-cygwin artifact
   - wget -q https://ci.appveyor.com/api/projects/tinysun212/llvm-builder-tugj7/artifacts/swift_llvm_bin.tar.gz
   - tar zxf swift_llvm_bin.tar.gz
@@ -90,34 +90,34 @@ build_script:
   - MKLINK /D i686-pc-cygwin x86_64-pc-cygwin
   
   # Build swift
-  - c:/cygwin64/bin/mkdir -p %WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/swift
-  - cd %WORK_DIR%/build/Ninja-ReleaseAssert/swift
+  - MKDIR %WORK_DIR_IN_CYGWIN%\build\Ninja-ReleaseAssert\swift-cygwin-x86_64
+  - CD %WORK_DIR%/build/Ninja-ReleaseAssert/swift-cygwin-x86_64
   # cmark patch
   - MKDIR bin
   - cp -p %WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/cmark/src/cygcmark-0.22.0.dll bin
   - cmake -G "Ninja" ../../../swift -DCMAKE_BUILD_TYPE=Release 
-    -DCMAKE_ASM_COMPILER=%WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/llvm/bin/clang.exe
-    -DCMAKE_C_COMPILER=%WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/llvm/bin/clang.exe
-    -DCMAKE_CXX_COMPILER=%WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/llvm/bin/clang++.exe
+    -DCMAKE_ASM_COMPILER=%WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/llvm-cygwin-x86_64/bin/clang.exe
+    -DCMAKE_C_COMPILER=%WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/llvm-cygwin-x86_64/bin/clang.exe
+    -DCMAKE_CXX_COMPILER=%WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/llvm-cygwin-x86_64/bin/clang++.exe
     -DPKG_CONFIG_EXECUTABLE=%CYGWIN64_DIR%/bin/pkg-config
     -DICU_UC_INCLUDE_DIR=%CYGWIN64_DIR%/include -DICU_UC_LIBRARY=%CYGWIN64_DIR%/lib/libicuuc.dll.a 
     -DICU_I18N_INCLUDE_DIR=%CYGWIN64_DIR%/include -DICU_I18N_LIBRARY=%CYGWIN64_DIR%/lib/libicui18n.dll.a
     -DSWIFT_INCLUDE_DOCS=FALSE
-    -DSWIFT_PATH_TO_CMARK_BUILD=%WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/cmark
+    -DSWIFT_PATH_TO_CMARK_BUILD=%WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/cmark-cygwin-x86_64
     -DSWIFT_PATH_TO_CMARK_SOURCE=%WORK_DIR_IN_CYGWIN%/cmark
     -DSWIFT_PATH_TO_LLVM_SOURCE=%WORK_DIR_IN_CYGWIN%/llvm
-    -DSWIFT_PATH_TO_LLVM_BUILD=%WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/llvm
+    -DSWIFT_PATH_TO_LLVM_BUILD=%WORK_DIR_IN_CYGWIN%/build/Ninja-ReleaseAssert/llvm-cygwin-x86_64
     -DSWIFT_STDLIB_ASSERTIONS:BOOL=TRUE
     %WORK_DIR_IN_CYGWIN%/swift
   - ninja
   
 after_build:
   # Convert absolute path to relative path in newlib.modulemap
-  - cd %WORK_DIR%/build/Ninja-ReleaseAssert/swift/lib/swift/cygwin/x86_64
+  - cd %WORK_DIR%/build/Ninja-ReleaseAssert/swift-cygwin-x86_64/lib/swift/cygwin/x86_64
   - sed -i -e 's;/cygdrive/c/cygwin64;../../../../..;' newlib.modulemap
   # Archiving to swift.zip
   - cd %WORK_DIR%/build/Ninja-ReleaseAssert
-  - mv swift usr
+  - mv swift-cygwin-x86_64 usr
   - 7z a swift.zip usr/bin/swift.exe usr/bin/*.dll usr/lib/swift
   - mv swift.zip %APPVEYOR_BUILD_FOLDER%
 
