--- a/appveyor_cygwin.yml
+++ b/appveyor_cygwin.yml
@@ -13,8 +13,8 @@ install:
   - SET WORK_DIR=c:\projects
   - SET WORK_DIR_IN_CYGWIN=/cygdrive/c/projects
   - SET CYGWIN64_DIR=/cygdrive/c/cygwin64
-  - SET GIT_TAG_NAME=swift-4.0.3+cygwin.20180212
-  #- SET GIT_TAG_NAME=swift-windows-4.0.3-branch
+  - SET GIT_TAG_OR_BRANCH=swift-4.0.3+cygwin.20180212
+  #- SET GIT_TAG_OR_BRANCH=swift-windows-4.0-branch
   - CD %WORK_DIR%
   
   # Install packages
@@ -39,24 +39,24 @@ install:
   # Download source
   - CD %WORK_DIR%
   # llvm source (need for cmake/modules/LLVM-Config.cmake at least)
-  - wget -q -O llvm_src.tar.gz https://github.com/tinysun212/swift-llvm/archive/%GIT_TAG_NAME%.tar.gz
+  - wget -q -O llvm_src.tar.gz https://github.com/tinysun212/swift-llvm/archive/%GIT_TAG_OR_BRANCH%.tar.gz
   - tar zxf llvm_src.tar.gz
-  - mv swift-llvm-%GIT_TAG_NAME% llvm
+  - mv swift-llvm-%GIT_TAG_OR_BRANCH% llvm
   # clang source (error at cmake/modules/SwiftSharedCMakeConfig.cmake:146)
-  - wget -q -O clang_src.tar.gz https://github.com/tinysun212/swift-clang/archive/%GIT_TAG_NAME%.tar.gz
+  - wget -q -O clang_src.tar.gz https://github.com/tinysun212/swift-clang/archive/%GIT_TAG_OR_BRANCH%.tar.gz
   # Pre-extract the targets of the symbolic links
   # The Windows native symbolic link system cann't create a symbolic link to non-exist target.
   - tar zxf clang_src.tar.gz 
-      swift-clang-%GIT_TAG_NAME%/test/Driver/Inputs/basic_cross_linux_tree/usr/bin/i386-unknown-linux-gnu-ld.gold
-      swift-clang-%GIT_TAG_NAME%/test/Driver/Inputs/basic_cross_linux_tree/usr/bin/x86_64-unknown-linux-gnu-ld.gold
-      swift-clang-%GIT_TAG_NAME%/test/Driver/Inputs/basic_cross_linux_tree/usr/i386-unknown-linux-gnu/bin/ld.gold
-      swift-clang-%GIT_TAG_NAME%/test/Driver/Inputs/basic_cross_linux_tree/usr/x86_64-unknown-linux-gnu/bin/ld.gold
-      swift-clang-%GIT_TAG_NAME%/test/Driver/Inputs/multilib_32bit_linux_tree/usr/bin/i386-unknown-linux-gnu-as
-      swift-clang-%GIT_TAG_NAME%/test/Driver/Inputs/multilib_32bit_linux_tree/usr/bin/i386-unknown-linux-gnu-ld
-      swift-clang-%GIT_TAG_NAME%/test/Driver/Inputs/multilib_64bit_linux_tree/usr/bin/x86_64-unknown-linux-gnu-as
-      swift-clang-%GIT_TAG_NAME%/test/Driver/Inputs/multilib_64bit_linux_tree/usr/bin/x86_64-unknown-linux-gnu-ld
+      swift-clang-%GIT_TAG_OR_BRANCH%/test/Driver/Inputs/basic_cross_linux_tree/usr/bin/i386-unknown-linux-gnu-ld.gold
+      swift-clang-%GIT_TAG_OR_BRANCH%/test/Driver/Inputs/basic_cross_linux_tree/usr/bin/x86_64-unknown-linux-gnu-ld.gold
+      swift-clang-%GIT_TAG_OR_BRANCH%/test/Driver/Inputs/basic_cross_linux_tree/usr/i386-unknown-linux-gnu/bin/ld.gold
+      swift-clang-%GIT_TAG_OR_BRANCH%/test/Driver/Inputs/basic_cross_linux_tree/usr/x86_64-unknown-linux-gnu/bin/ld.gold
+      swift-clang-%GIT_TAG_OR_BRANCH%/test/Driver/Inputs/multilib_32bit_linux_tree/usr/bin/i386-unknown-linux-gnu-as
+      swift-clang-%GIT_TAG_OR_BRANCH%/test/Driver/Inputs/multilib_32bit_linux_tree/usr/bin/i386-unknown-linux-gnu-ld
+      swift-clang-%GIT_TAG_OR_BRANCH%/test/Driver/Inputs/multilib_64bit_linux_tree/usr/bin/x86_64-unknown-linux-gnu-as
+      swift-clang-%GIT_TAG_OR_BRANCH%/test/Driver/Inputs/multilib_64bit_linux_tree/usr/bin/x86_64-unknown-linux-gnu-ld
   - tar zxf clang_src.tar.gz
-  - mv swift-clang-%GIT_TAG_NAME% clang
+  - mv swift-clang-%GIT_TAG_OR_BRANCH% clang
   # link clang into llvm
   - CD %WORK_DIR%/llvm/tools
   - MKLINK /d clang ..\..\clang
@@ -65,7 +65,7 @@ install:
   - CD %WORK_DIR%/cmark & git checkout -qf master & CD ..
   # swift source
   - git clone https://github.com/tinysun212/swift-windows.git %WORK_DIR_IN_CYGWIN%/swift
-  - CD %WORK_DIR%/swift & git checkout -qf %GIT_TAG_NAME% & CD ..
+  - CD %WORK_DIR%/swift & git checkout -qf %GIT_TAG_OR_BRANCH% & CD ..
     
 build_script:
   # Build cmark
