--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ install:
   - SET "PATH_MINGW64=c:\msys64\mingw64\bin;c:\msys64\usr\bin"
   - SET PATH=%PATH_MINGW64%;%PATH_ORIGINAL%
   - SET MINGW64_DIR=c:/msys64/mingw64
-  - SET WORK_DIR=c:/projects
+  - SET WORK_DIR=c:\projects
   - SET GIT_TAG_OR_BRANCH=swift-4.0.3+mingw.20180212
   - SET TAG_OR_BRANCH_IN_FOLDER=swift-4.0.3-mingw.20180212  
   #- SET GIT_TAG_OR_BRANCH=swift-windows-4.0-branch  
@@ -62,18 +62,18 @@ install:
   - MOVE swift-clang-%TAG_OR_BRANCH_IN_FOLDER% clang
   # link clang into llvm
   - cd %WORK_DIR%/llvm/tools
-  - mklink /d clang ..\..\clang
+  - MKLINK /d clang ..\..\clang
   # cmark source
   - git clone https://github.com/apple/swift-cmark.git %WORK_DIR%/cmark
   - cd %WORK_DIR%/cmark & git checkout -qf master & cd ..
   # swift source
   - git clone https://github.com/tinysun212/swift-windows.git %WORK_DIR%/swift
-  - cd %WORK_DIR%/swift & git checkout -qf swift-windows-4.0-branch & cd ..
+  - cd %WORK_DIR%/swift & git checkout -qf %GIT_TAG_OR_BRANCH% & cd ..
     
 build_script:
   # Build cmark
-  - c:/msys64/usr/bin/mkdir -p %WORK_DIR%/build/NinjaMinGW/cmark
-  - cd %WORK_DIR%/build/NinjaMinGW/cmark
+  - MKDIR %WORK_DIR%\build\NinjaMinGW\cmark
+  - CD %WORK_DIR%/build/NinjaMinGW/cmark
   - cmake -G Ninja -D CMAKE_BUILD_TYPE=RELEASE -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ %WORK_DIR%/cmark
   - ninja
   - cd src
@@ -85,21 +85,25 @@ build_script:
 
   # Load llvm/clang lib
   - c:/msys64/usr/bin/mkdir -p %WORK_DIR%/build/NinjaMinGW/llvm
-  - cd %WORK_DIR%/build/NinjaMinGW/llvm
+  - CD %WORK_DIR%/build/NinjaMinGW/llvm
   - wget -q https://ci.appveyor.com/api/projects/tinysun212/llvm-builder/artifacts/swift_llvm_bin.tar.gz
   - tar zxf swift_llvm_bin.tar.gz
   
   # Build swift
-  - c:/msys64/usr/bin/mkdir -p %WORK_DIR%/build/NinjaMinGW/swift
-  - cd %WORK_DIR%/build/NinjaMinGW/swift
+  - MKDIR %WORK_DIR%\build\NinjaMinGW\swift
+  - CD %WORK_DIR%/build/NinjaMinGW/swift
   # cmark patch
-  - mkdir bin & cp -p %WORK_DIR%/build/NinjaMinGW/cmark/src/libcmark.dll bin
+  - MKDIR bin & cp -p %WORK_DIR%/build/NinjaMinGW/cmark/src/libcmark.dll bin
   - cmake -G "Ninja" ../../../swift -DCMAKE_BUILD_TYPE=Release -DCMAKE_ASM_COMPILER=%WORK_DIR%/build/NinjaMinGW/llvm/bin/clang.exe -DCMAKE_C_COMPILER=%WORK_DIR%/build/NinjaMinGW/llvm/bin/clang.exe  -DCMAKE_CXX_COMPILER=%WORK_DIR%/build/NinjaMinGW/llvm/bin/clang++.exe -DPKG_CONFIG_EXECUTABLE=%MINGW64_DIR%/bin/pkg-config -DICU_UC_INCLUDE_DIR=%MINGW64_DIR%include -DICU_UC_LIBRARY=%MINGW64_DIR%/lib/libicuuc.dll.a -DICU_I18N_INCLUDE_DIR=%MINGW64_DIR%/include -DICU_I18N_LIBRARY=%MINGW64_DIR%/lib/libicuin.dll.a -DSWIFT_INCLUDE_DOCS=FALSE -DSWIFT_PATH_TO_CMARK_BUILD=%WORK_DIR%/build/NinjaMinGW/cmark -DSWIFT_PATH_TO_CMARK_SOURCE=%WORK_DIR%/cmark -DSWIFT_PATH_TO_LLVM_SOURCE=%WORK_DIR%/llvm -DSWIFT_PATH_TO_LLVM_BUILD=%WORK_DIR%/build/NinjaMinGW/llvm -DSWIFT_STDLIB_ASSERTIONS:BOOL=TRUE %WORK_DIR%/swift
   - ninja
-  
+
+  # Move *.dll.a from mingw/x86_64 to mingw
+  - CD %WORK_DIR%/build/NinjaMinGW/swift/lib/swift/mingw/x86_64
+  - MOVE *.dll.a ..
+
 after_build:
   # Convert absolute path to relative path in mingw_crt.modulemap
-  - cd %WORK_DIR%/build/NinjaMinGW/swift/lib/swift/mingw/x86_64
+  - CD %WORK_DIR%/build/NinjaMinGW/swift/lib/swift/mingw/x86_64
   - sed -i -e 's;c:/msys64;../../../../..;' mingw_crt.modulemap
   # Archiving to swift.zip
   - cd %WORK_DIR%/build/NinjaMinGW
