--- a/appveyor.yml
+++ b/appveyor.yml
@@ -109,7 +109,7 @@ after_build:
   # Archiving to swift.zip
   - CD %WORK_DIR%/build/NinjaMinGW
   - mv swift usr
-  - 7z a swift.zip usr/bin/swift.exe usr/bin/*.dll usr/lib/swift
+  - 7z a swift.zip usr/bin/swift.exe usr/bin/swift-demangle.exe usr/bin/*.dll usr/lib/swift
   - mv swift.zip %APPVEYOR_BUILD_FOLDER%
 
 test_script:
